--- a/GraoParaMVN/GraoParaPersistence/pom.xml
+++ b/GraoParaMVN/GraoParaPersistence/pom.xml
@@ -65,6 +65,12 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.openjpa</groupId>
+			<artifactId>openjpa-persistence-jdbc</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 
 
 	</dependencies>
