--- a/GraoParaMVN/GraoParaPersistence/pom.xml
+++ b/GraoParaMVN/GraoParaPersistence/pom.xml
@@ -71,6 +71,11 @@
 			<version>2.2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>3.5.0-Final</version>
+		</dependency>
 
 
 	</dependencies>
