--- a/GraoParaMVN/GraoParaWEB/pom.xml
+++ b/GraoParaMVN/GraoParaWEB/pom.xml
@@ -13,11 +13,18 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      	<groupId>junit</groupId>
+      	<artifactId>junit</artifactId>
+      	<version>3.8.1</version>
+      	<scope>test</scope>
     </dependency>
+    
+    <dependency>
+		<groupId>jboss</groupId>
+		<artifactId>jboss-j2ee</artifactId>
+		<version>4.2.2.GA</version>
+	</dependency>
+            
   </dependencies>
   <build>
     <finalName>GraoParaWEB</finalName>
