--- a/GraoParaMVN/GraoParaWEB/pom.xml
+++ b/GraoParaMVN/GraoParaWEB/pom.xml
@@ -1,32 +1,42 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>br.unifesp.coruja</groupId>
-    <artifactId>GraoParaMVN</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>GraoParaWEB</artifactId>
-  <packaging>pom</packaging>
-  <name>GraoParaWEB Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      	<groupId>junit</groupId>
-      	<artifactId>junit</artifactId>
-      	<version>3.8.1</version>
-      	<scope>test</scope>
-    </dependency>
-    
-    <dependency>
-		<groupId>jboss</groupId>
-		<artifactId>jboss-j2ee</artifactId>
-		<version>4.2.2.GA</version>
-	</dependency>
-            
-  </dependencies>
-  <build>
-    <finalName>GraoParaWEB</finalName>
-  </build>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>br.unifesp.coruja</groupId>
+		<artifactId>GraoParaBusiness</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../GraoParaBusiness</relativePath>
+	</parent>
+	
+	<artifactId>GraoParaWEB</artifactId>
+	<packaging>pom</packaging>
+	<name>GraoParaWEB</name>
+	<url>http://maven.apache.org</url>
+	
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>jboss</groupId>
+			<artifactId>jboss-j2ee</artifactId>
+			<version>4.2.2.GA</version>
+		</dependency>
+
+		<dependency>
+			<groupId>br.unifesp.coruja</groupId>
+			<artifactId>GraoParaBusiness</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+	</dependencies>
+	<build>
+		<finalName>GraoParaWEB</finalName>
+	</build>
 </project>
