--- a/GraoParaMVN/GraoParaWEB/pom.xml
+++ b/GraoParaMVN/GraoParaWEB/pom.xml
@@ -42,6 +42,16 @@
 			<version>1.0.2.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<version>1.1.EDR1.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>GraoParaWEB</finalName>
