--- a/GraoPara/pom.xml
+++ b/GraoPara/pom.xml
@@ -4,12 +4,10 @@
 	<groupId>br.unifesp.coruja</groupId>
 	<artifactId>GraoPara</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>pom</packaging>
 	<name>Grão Para</name>
 
 	<dependencies>
-
-
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
