--- a/GraoPara/WebContent/WEB-INF/web.xml
+++ b/GraoPara/WebContent/WEB-INF/web.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
- <session-config>
-  <tracking-mode>COOKIE</tracking-mode>
- </session-config>
- <welcome-file-list>
-  <welcome-file>/pages/public/index.jsp</welcome-file>
- </welcome-file-list>
- <login-config>
-  <auth-method>FORM</auth-method>
- </login-config>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <session-config>
+    <tracking-mode>COOKIE</tracking-mode>
+  </session-config>
+  <welcome-file-list>
+    <welcome-file>/pages/public/index.jsp</welcome-file>
+  </welcome-file-list>
+  <login-config>
+    <auth-method>FORM</auth-method>
+  </login-config>
 </web-app>
