--- a/GraoPara/WebContent/WEB-INF/web.xml
+++ b/GraoPara/WebContent/WEB-INF/web.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <servlet>
+    <servlet-name>InitServlet</servlet-name>
+    <servlet-class>webview.InitServlet</servlet-class>
+    <init-param>
+      <param-name>database</param-name>
+      <param-value>localhost:5324</param-value>
+    </init-param>
+    <init-param>
+      <param-name>log4j.properties-location</param-name>
+      <param-value>WEB-INF/log4j.properties</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
   <session-config>
     <tracking-mode>COOKIE</tracking-mode>
   </session-config>
