--- a/GraoPara/pom.xml
+++ b/GraoPara/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>br.unifesp.coruja</groupId>
 	<artifactId>GraoPara</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<packaging>war</packaging>
 	<name>Grão Para</name>
 
 	<dependencies>
@@ -68,6 +68,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.5.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -77,6 +78,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
+				<version>2.2</version>
 				<configuration>
 					<webXml>WebContent/WEB-INF/web.xml</webXml>
 				</configuration>
