--- a/GraoPara/WebContent/WEB-INF/log4j.properties
+++ b/GraoPara/WebContent/WEB-INF/log4j.properties
@@ -6,3 +6,12 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+
+# FILE
+log4j.appender.FILE = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.FILE.File = ${rootPath}/logs/testLog.log
+log4j.appender.FILE.Append = true
+log4j.appender.FILE.DatePattern = '.'dd-MM-yyyy
+log4j.appender.FILE.layout = org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} %c{1} [%p] %m%n
+
