Organização de pastas e páginas WEB.

--- a/GraoPara/WebContent/WEB-INF/web.xml
+++ b/GraoPara/WebContent/WEB-INF/web.xml
@@ -18,7 +18,7 @@
   <tracking-mode>COOKIE</tracking-mode>
  </session-config>
  <welcome-file-list>
-  <welcome-file>/pages/public/index.jsp</welcome-file>
+  <welcome-file>/index.jsp</welcome-file>
  </welcome-file-list>
  <login-config>
   <auth-method>FORM</auth-method>
