--- a/GraoPara/pom.xml
+++ b/GraoPara/pom.xml
@@ -61,6 +61,11 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-search</artifactId>
+			<version>4.1.1.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
