--- a/GraoPara/pom.xml
+++ b/GraoPara/pom.xml
@@ -80,7 +80,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<webXml>/src/main/webapp/web.xml</webXml>
+					<webXml>${basedir}/src/main/webapp/web.xml</webXml>
 				</configuration>
 			</plugin>
 
