--- a/GraoPara/pom.xml
+++ b/GraoPara/pom.xml
@@ -14,6 +14,12 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>4.1.5.Final</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>net.tanesha.recaptcha4j</groupId>
+		    <artifactId>recaptcha4j</artifactId>
+		    <version>0.0.7</version>
+		</dependency>
 
 		<dependency>
 			<groupId>postgresql</groupId>
