Welcome File funfando.

--- a/GraoPara/src/main/webapp/web.xml
+++ b/GraoPara/src/main/webapp/web.xml
@@ -14,4 +14,9 @@
  <session-config>
   <tracking-mode>COOKIE</tracking-mode>
  </session-config>
+ <welcome-file-list>
+  <welcome-file>index.jsp</welcome-file>
+  <welcome-file>indexUser.jsp</welcome-file>
+  <welcome-file>indexAdmin.jsp</welcome-file>
+ </welcome-file-list>
 </web-app>
