--- a/GraoPara-BD2/src/main/webapp/web.xml
+++ b/GraoPara-BD2/src/main/webapp/web.xml
@@ -14,8 +14,6 @@
     <tracking-mode>COOKIE</tracking-mode>
   </session-config>
   <welcome-file-list>
-    <welcome-file>public/index.jsp</welcome-file>
-    <welcome-file>protected/user/index.jsp</welcome-file>
-    <welcome-file>protected/admin/index.jsp</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
