--- a/GraoPara-BD2/pom.xml
+++ b/GraoPara-BD2/pom.xml
@@ -24,6 +24,7 @@
 				<version>2.2</version>
 				<configuration>
 					<webXml>${basedir}/src/main/webapp/web.xml</webXml>
+					<warName>GraoPara</warName>
 				</configuration>
 			</plugin>
 
@@ -80,11 +81,6 @@
 			<version>1.1.1</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.jboss.spec</groupId>
-			<artifactId>jboss-javaee-all-6.0</artifactId>
-			<version>3.0.1.Final</version>
-		</dependency>
 
 		<dependency>
 			<groupId>xalan</groupId>
@@ -110,6 +106,12 @@
 			<version>4.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>6.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 </project>
