--- a/GraoPara-BD2/pom.xml
+++ b/GraoPara-BD2/pom.xml
@@ -5,6 +5,10 @@
 	<artifactId>GraoPara-BD2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
+	
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 	<build>
 		<plugins>
