--- a/GraoPara-BD2/pom.xml
+++ b/GraoPara-BD2/pom.xml
@@ -123,6 +123,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901-1.jdbc4</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.4.6</version>
+		</dependency>
 	</dependencies>
 
 </project>
